changed heading text color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div
-      class="max-w-md mx-auto my-16 bg-yellow-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl"
+      class="max-w-md mx-auto my-16 mx-8 bg-yellow-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl"
     >
       <div class="md:flex">
         <div class="md:flex-shrink-0">
@@ -20,7 +20,7 @@
         </div>
         <div class="p-8">
           <div
-            class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"
+            class="uppercase tracking-wide text-sm text-red-500 font-semibold"
           >
             Case study
           </div>
