added background to heading text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="p-8">
           <div
-            class="uppercase tracking-wide text-sm text-red-500 font-semibold"
+            class="uppercase tracking-wide text-sm text-red-500 font-semibold bg-indigo-500 md:bg-white-500 lg:bg-green-500"
           >
             Case study
           </div>
