--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div>
     </div>
     <form>
-      <input class="border border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent ...">
-      <button class="bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-opacity-50 ...">
+      <input class="border border-green-700 focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent ...">
+      <button class="bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-600 focus:ring-opacity-50 ...">
         Sign up
       </button>
     </form>
