<body>: fixed background and text color, <div>: added a group class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-indigo-500">
+  <body class="bg-black text-white">
     <div
       class="max-w-md mx-auto my-16 mx-8 bg-yellow-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl"
     >
@@ -18,18 +18,18 @@
             alt="Man looking at item at a store"
           />
         </div>
-        <div class="p-8">
+        <div class="p-8 group">
           <div
-            class="uppercase tracking-wide text-sm text-red-500 font-semibold bg-indigo-500 md:bg-white-500 lg:bg-green-500"
+            class="uppercase tracking-wide text-sm text-red-500 font-semibold group-hover:text-blue-900" 
           >
             Case study
           </div>
           <a
             href="#"
-            class="block mt-1 text-lg leading-tight font-medium text-black hover:underline"
+            class="block mt-1 text-lg leading-tight font-medium text-black hover:underline group-hover:text-blue-900"
             >Finding customers for your new business</a
           >
-          <p class="mt-2 text-gray-500">
+          <p class="mt-2 text-gray-500 group-hover:text-blue-500" >
             Getting a new business off the ground is a lot of hard work. Here
             are five ideas you can use to find your first customers.
           </p>
