--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <form>
       <input class="border border-green-700 focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent ...">
-      <button class="bg-green-600 p-2 rounded-xl text-white hover:bg-yellow-500 hover:text-blue-500 ">
+      <button class="bg-green-600 p-2 rounded-xl text-white hover:bg-yellow-500 hover:text-blue-500 motion-safe:hover:scale-110">
         Sign up
       </button>
     </form>
