--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@
         Sign up
       </button>
     </form>
+    <div class="bg-white dark:bg-gray-800">
+      <h1 class="text-gray-900 dark:text-white">Dark mode is here!</h1>
+      <p class="text-gray-600 dark:text-gray-300">
+        Lorem ipsum...
+      </p>
+    </div>
   </body>
 </html>
