changed text content

--- a/index.html
+++ b/index.html
@@ -15,38 +15,33 @@
           <img
             class="h-48 w-full object-cover md:h-full md:w-48"
             src="./assets/Airport Taxi.jpg"
-            alt="Man looking at item at a store"
+            alt="A taxi picking up passengers at the Airport"
           />
         </div>
         <div class="p-8 group">
           <div
             class="uppercase tracking-wide text-sm text-red-500 font-semibold group-hover:text-blue-900" 
           >
-            Case study
+            Airport Taxis
           </div>
           <a
             href="#"
             class="block mt-1 text-lg leading-tight font-medium text-black hover:underline group-hover:text-blue-900"
-            >Finding customers for your new business</a
+            >Picking travelers from the airport</a
           >
           <p class="mt-2 text-gray-500 group-hover:text-blue-500" >
-            Getting a new business off the ground is a lot of hard work. Here
+            Picking up customers from the airport requires a lot of hard and smart work. Here
             are five ideas you can use to find your first customers.
           </p>
         </div>
       </div>
     </div>
-    <form>
+    <form class="flex flex-row items-center justify-center space-x-4">
       <input class="border border-green-700 focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent ...">
-      <button class="bg-green-600 p-2 rounded-xl text-white hover:bg-yellow-500 hover:text-blue-500 motion-safe:hover:scale-110">
+      <button class="bg-green-600 p-2 rounded-xl text-white hover:bg-yellow-500 hover:text-black motion-safe:hover:scale-110">
         Sign up
       </button>
     </form>
-    <div class="bg-white dark:bg-gray-800">
-      <h1 class="text-gray-900 dark:text-white">Dark mode is here!</h1>
-      <p class="text-gray-600 dark:text-gray-300">
-        Lorem ipsum...
-      </p>
-    </div>
+    
   </body>
 </html>
