--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         Sign up
       </button>
     </form>
-    <div class="flex flex-col items-center justify-center mt-8 space-y-4">
-      <button class="bg-red-500 text-white p-4 font-semibold text-lg rounded-full">A Very Important Button</button>
-      <button class="bg-blue-500 text-white px-4 py-2 font-bold text-lg rounded">A Very Important Button</button>
+    <div class="flex flex-col items-center justify-center mt-8 space-y-4 group">
+      <button class="bg-red-500 text-white p-4 font-semibold text-lg rounded-full group-hover:bg-purple-600">A Very Important Button</button>
+      <button class="bg-blue-500 text-white px-4 py-2 font-bold text-lg rounded group-hover:bg-purple-900">A Very Important Button</button>
     </div>
     
   </body>
