--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-black text-white">
-    <div
+    <!-- <div
       class="max-w-md mx-auto my-16 mx-8 bg-yellow-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl"
     >
       <div class="md:flex">
@@ -20,7 +20,7 @@
         </div>
         <div class="p-8 group">
           <div
-            class="uppercase tracking-wide text-sm text-red-500 font-semibold group-hover:text-blue-900" 
+            class="uppercase tracking-wide text-sm text-red-500 font-semibold group-hover:text-blue-900"
           >
             Airport Taxis
           </div>
@@ -29,23 +29,33 @@
             class="block mt-1 text-lg leading-tight font-medium text-black hover:underline group-hover:text-blue-900"
             >Picking travelers from the airport</a
           >
-          <p class="mt-2 text-gray-500 group-hover:text-blue-500" >
-            Picking up customers from the airport requires a lot of hard and smart work. Here
-            are five ideas you can use to find your first customers.
+          <p class="mt-2 text-gray-500 group-hover:text-blue-500">
+            Picking up customers from the airport requires a lot of hard and
+            smart work. Here are five ideas you can use to find your first
+            customers.
           </p>
         </div>
       </div>
-    </div>
-    <form class="flex flex-row items-center justify-center space-x-4">
-      <input class="border border-green-700 focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent ...">
-      <button class="bg-green-600 p-2 rounded-xl text-white hover:bg-yellow-500 hover:text-black motion-safe:hover:scale-110">
-        Sign up
-      </button>
-    </form>
-    <div class="flex flex-col items-center justify-center mt-8 space-y-4 group">
-      <button class="bg-red-500 text-white p-4 font-semibold text-lg rounded-full group-hover:bg-purple-600">A Very Important Button</button>
-      <button class="bg-blue-500 text-white px-4 py-2 font-bold text-lg rounded group-hover:bg-purple-900">A Very Important Button</button>
-    </div>
-    
+    </div> -->
+    <!-- <div class="flex justify-center items-center h-24 w-[375px] bg-gray-800 mx-auto my-16"> -->
+      <div
+        class="flex flex-col py-4 px-4 bg-white rounded-xl border-2 border-purple-400 w-[375px] text-black"
+      >
+        <h1>An Important Alert</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in
+          metus ornare, volutpat mauris sit amet, ornare est. Praesent massa
+          nulla, lacinia sit amet neque sed, ornare porttitor ante. Nunc
+          vulputate ultrices sollicitudin. Quisque in tristique felis, vel
+          blandit felis. Aliquam ut vestibulum massa. Proin at lectus in risus
+          ultrices interdum a fringilla nisi. Maecenas tristique augue at
+          pretium consectetur.
+        </p>
+        <div>
+          <button>Confirm</button>
+          <button>Cancel</button>
+        </div>
+      </div>
+    <!-- </div> -->
   </body>
 </html>
