--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div
         class="flex flex-col py-4 px-4 bg-white rounded-xl border-2 border-purple-400 w-[375px] text-black"
       >
-        <h1>An Important Alert</h1>
+        <h1 class="text-purple-600 text-xl my-4">An Important Alert</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in
           metus ornare, volutpat mauris sit amet, ornare est. Praesent massa
@@ -51,9 +51,9 @@
           ultrices interdum a fringilla nisi. Maecenas tristique augue at
           pretium consectetur.
         </p>
-        <div>
-          <button>Confirm</button>
-          <button>Cancel</button>
+        <div class="mt-4">
+          <button class="bg-purple-600 px-2 py-1 rounded ">Confirm</button>
+          <button class="bg-transparent px-2 py-1 rounded text-purple-400 border-2 border-purple-400">Cancel</button>
         </div>
       </div>
     <!-- </div> -->
