--- a/index.html
+++ b/index.html
@@ -37,25 +37,30 @@
         </div>
       </div>
     </div> -->
-    <!-- <div class="flex justify-center items-center h-24 w-[375px] bg-gray-800 mx-auto my-16"> -->
-      <div
-        class="flex flex-col py-4 px-4 bg-white rounded-xl border-2 border-purple-400 w-[375px] text-black"
-      >
-        <h1 class="text-purple-600 text-xl my-4">An Important Alert</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in
-          metus ornare, volutpat mauris sit amet, ornare est. Praesent massa
-          nulla, lacinia sit amet neque sed, ornare porttitor ante. Nunc
-          vulputate ultrices sollicitudin. Quisque in tristique felis, vel
-          blandit felis. Aliquam ut vestibulum massa. Proin at lectus in risus
-          ultrices interdum a fringilla nisi. Maecenas tristique augue at
-          pretium consectetur.
-        </p>
-        <div class="mt-4">
-          <button class="bg-purple-600 px-2 py-1 rounded ">Confirm</button>
-          <button class="bg-transparent px-2 py-1 rounded text-purple-400 border-2 border-purple-400">Cancel</button>
-        </div>
+    <div
+      class="flex flex-col p-4 mx-auto my-16 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
+    >
+      <h1 class="text-purple-600 text-2xl mb-4 font-semibold">An Important Alert</h1>
+      <p class="text-sm mb-4">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus
+        ornare, volutpat mauris sit amet, ornare est. Praesent massa nulla,
+        lacinia sit amet neque sed, ornare porttitor ante. Nunc vulputate
+        ultrices sollicitudin. Quisque in tristique felis, vel blandit felis.
+        Aliquam ut vestibulum massa. Proin at lectus in risus ultrices interdum
+        a fringilla nisi. Maecenas tristique augue at pretium consectetur.
+      </p>
+      <div class="">
+        <button
+          class="bg-purple-400 px-2 py-1 rounded border-2 border-purple-600"
+        >
+          Confirm
+        </button>
+        <button
+          class="bg-transparent px-2 py-1 rounded text-purple-400 border-2 border-purple-600"
+        >
+          Cancel
+        </button>
       </div>
-    <!-- </div> -->
+    </div>
   </body>
 </html>
