--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       </div>
     </div> -->
     <div
-      class="flex flex-col p-4 mx-auto my-16 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
+      class="flex flex-col p-4 mx-auto my-16 bg-gradient-to-r from-red-200 to-pink-500 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
     >
-      <h1 class="text-purple-600 text-2xl mb-4 font-semibold">An Important Alert</h1>
+      <h1 class="text-purple-600 text-2xl mb-4 font-semibold">
+        An Important Alert
+      </h1>
       <p class="text-sm mb-4">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus
         ornare, volutpat mauris sit amet, ornare est. Praesent massa nulla,
