--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       </div>
     </div> -->
     <div
-      class="flex flex-col p-4 mx-auto my-16 bg-gradient-to-r from-red-200 to-pink-500 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
+      class="flex flex-col p-4 space-y-4 mx-auto my-16 bg-gradient-to-r from-red-200 to-pink-500 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
     >
-      <h1 class="text-purple-600 text-2xl mb-4 font-semibold">
+      <h1 class="text-purple-600 text-2xl font-semibold">
         An Important Alert
       </h1>
-      <p class="text-sm mb-4">
+      <p class="text-sm">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus
         ornare, volutpat mauris sit amet, ornare est. Praesent massa nulla,
         lacinia sit amet neque sed, ornare porttitor ante. Nunc vulputate
@@ -63,6 +63,12 @@
           Cancel
         </button>
       </div>
+    </div>
+    <div class="bg-white text-black space-x-8 max-w-max px-4 py-2 mx-auto rounded shadow-md text-center">
+      <a href="#">Courses</a>
+      <a href="#">Learn</a>
+      <a href="#">Pricing</a>
+      <a href="#">Login</a>
     </div>
   </body>
 </html>
