--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <input
           id="required"
           placeholder="Required Field"
-          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500"
+          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none "
           required
         />
       </div>
@@ -105,7 +105,7 @@
         <input
           id="input"
           placeholder="Input Field"
-          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500"
+          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none focus:ring-1 focus:ring-purple-400"
         />
       </div>
 
