--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <input
           id="required"
           placeholder="Required Field"
-          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none "
+          class="w-full caret-purple-500 border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none "
           required
         />
       </div>
@@ -105,12 +105,12 @@
         <input
           id="input"
           placeholder="Input Field"
-          class="w-full border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none focus:ring-1 focus:ring-purple-400"
+          class="w-full border-2 caret-purple-500 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none focus:ring-1 focus:ring-purple-400"
         />
       </div>
 
       <div class="space-x-1">
-        <input id="terms" type="checkbox" />
+        <input id="terms" type="checkbox" class="accent-red-500" />
         <label for="terms">I accept the terms and conditions.</label>
       </div>
 
