--- a/index.html
+++ b/index.html
@@ -7,69 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-black text-white">
-    <!-- <div
-      class="max-w-md mx-auto my-16 mx-8 bg-yellow-500 rounded-xl shadow-md overflow-hidden md:max-w-2xl"
-    >
-      <div class="md:flex">
-        <div class="md:flex-shrink-0">
-          <img
-            class="h-48 w-full object-cover md:h-full md:w-48"
-            src="./assets/Airport Taxi.jpg"
-            alt="A taxi picking up passengers at the Airport"
-          />
-        </div>
-        <div class="p-8 group">
-          <div
-            class="uppercase tracking-wide text-sm text-red-500 font-semibold group-hover:text-blue-900"
-          >
-            Airport Taxis
-          </div>
-          <a
-            href="#"
-            class="block mt-1 text-lg leading-tight font-medium text-black hover:underline group-hover:text-blue-900"
-            >Picking travelers from the airport</a
-          >
-          <p class="mt-2 text-gray-500 group-hover:text-blue-500">
-            Picking up customers from the airport requires a lot of hard and
-            smart work. Here are five ideas you can use to find your first
-            customers.
-          </p>
-        </div>
-      </div>
-    </div> -->
-    <!-- <div
-      class="flex flex-col p-4 space-y-4 mx-auto my-16 bg-gradient-to-r from-red-200 to-pink-500 bg-white rounded-md border-2 border-purple-500 w-[375px] text-black shadow-md"
-    >
-      <h1 class="text-purple-600 text-2xl font-semibold">
-        An Important Alert
-      </h1>
-      <p class="text-sm">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus
-        ornare, volutpat mauris sit amet, ornare est. Praesent massa nulla,
-        lacinia sit amet neque sed, ornare porttitor ante. Nunc vulputate
-        ultrices sollicitudin. Quisque in tristique felis, vel blandit felis.
-        Aliquam ut vestibulum massa. Proin at lectus in risus ultrices interdum
-        a fringilla nisi. Maecenas tristique augue at pretium consectetur.
-      </p>
-      <div class="">
-        <button
-          class="bg-purple-400 px-2 py-1 rounded border-2 border-purple-600"
-        >
-          Confirm
-        </button>
-        <button
-          class="bg-transparent px-2 py-1 rounded text-purple-400 border-2 border-purple-600"
-        >
-          Cancel
-        </button>
-      </div>
-    </div>
-    <div class="bg-white text-black space-x-8 max-w-max px-4 py-2 mx-auto rounded shadow-md text-center">
-      <a href="#">Courses</a>
-      <a href="#">Learn</a>
-      <a href="#">Pricing</a>
-      <a href="#">Login</a>
-    </div> -->
     <form
       onsubmit="event.preventDefault()"
       class="container mx-auto space-y-6 w-96 mt-16 rounded-md border-2 border-purple-600 bg-white p-4 text-purple-950 shadow-md"
@@ -81,7 +18,7 @@
         <input
           id="required"
           placeholder="Required Field"
-          class="w-full caret-purple-500 border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none "
+          class="w-full caret-red-500 border-2 border-purple-400 rounded-md p-2 text-gray-500 focus:outline-none"
           required
         />
       </div>
@@ -110,7 +47,7 @@
       </div>
 
       <div class="space-x-1">
-        <input id="terms" type="checkbox" class="accent-red-500" />
+        <input id="terms" type="checkbox" class="accent-purple-500" />
         <label for="terms">I accept the terms and conditions.</label>
       </div>
 
