testing dark mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main
-      class="container mx-auto rounded-md border-2 border-slate-300 bg-slate-50 p-4 shadow-lg dark:border-slate-700 dark:bg-slate-900 dark:shadow-slate-900"
+      class="container mx-auto my-12 w-112 rounded-md border-2 border-slate-300 bg-slate-50 p-4 shadow-lg dark:border-slate-700 dark:bg-slate-900 dark:shadow-slate-900"
     >
       <h1 class="mb-4 text-3xl font-bold text-slate-600 dark:text-slate-200">
         An Important Title
