Web Developer Profile Card

--- a/index.html
+++ b/index.html
@@ -6,30 +6,19 @@
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body>
-    <main
-      class="container mx-auto my-12 w-112 rounded-md border-2 border-slate-300 bg-slate-50 p-4 shadow-lg dark:border-slate-700 dark:bg-slate-900 dark:shadow-slate-900"
-    >
-      <h1 class="mb-4 text-3xl font-bold text-slate-600 dark:text-slate-200">
-        An Important Title
-      </h1>
-      <p class="text-slate-900 dark:text-slate-50">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
-        dui non tortor iaculis, quis aliquet nisl molestie. Donec finibus, mi
-        sed posuere vehicula, sem libero ornare justo, eget ullamcorper sem
-        ligula sit amet mi. Integer et euismod neque. Vestibulum nec lacus
-        faucibus arcu pharetra faucibus vel tempor magna. Nunc ipsum elit,
-        tempor sed augue sit amet, ultrices imperdiet mi. Nam condimentum lorem
-        non libero tristique blandit. Fusce suscipit, justo bibendum ullamcorper
-        dapibus, sapien augue commodo lacus, at egestas ante quam id risus.
-        Fusce non elementum ligula. Nunc mauris ex, aliquam sed tortor vel,
-        efficitur convallis eros. Maecenas aliquam a augue ac vehicula. Sed
-        hendrerit tellus sed odio semper, in cursus dolor vestibulum. Vestibulum
-        pretium magna at metus aliquet volutpat. Sed nec felis ut leo feugiat
-        tincidunt ac eget diam. Interdum et malesuada fames ac ante ipsum primis
-        in faucibus. Mauris dapibus dapibus risus et gravida. Donec feugiat ante
-        eu magna semper feugiat.
-      </p>
-    </main>
+  <body class="bg-black">
+    <div class="flex flex-col items-center justify-center min-h-screen bg-white w-96 rounded-lg shadow-lg p-6">
+      <h2>Jane Doe</h2>
+      <p>Web Developer</p>
+      <p>Passionate web developer with experience in building responsive and scalable websites.</p>
+      <div class="flex space-x-4 mt-4">
+        <a href="#" class="text-blue-500 hover:underline">LinkedIn</a>
+        <a href="#" class="text-blue-500 hover:underline">GitHub</a>
+        <a href="#" class="text-blue-500 hover:underline">Twitter</a>
+    </div>
+    <div>
+      <button>Follow</button>
+      <button>Message</button>
+    </div>
   </body>
 </html>
