added container class

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-black">
-    <div class="flex flex-col items-center justify-center min-h-screen bg-white w-96 rounded-lg shadow-lg p-6">
-      <h2>Jane Doe</h2>
-      <p>Web Developer</p>
-      <p>Passionate web developer with experience in building responsive and scalable websites.</p>
-      <div class="flex space-x-4 mt-4">
-        <a href="#" class="text-blue-500 hover:underline">LinkedIn</a>
-        <a href="#" class="text-blue-500 hover:underline">GitHub</a>
-        <a href="#" class="text-blue-500 hover:underline">Twitter</a>
-    </div>
-    <div>
-      <button>Follow</button>
-      <button>Message</button>
+    <div class="flex items-center justify-center min-h-screen my-16">
+      <div class="flex flex-col items-center justify-center bg-white w-96 rounded-lg shadow-lg p-6">
+        <h2>Jane Doe</h2>
+        <p>Web Developer</p>
+        <p>Passionate web developer with experience in building responsive and scalable websites.</p>
+        <div class="flex space-x-4 mt-4">
+          <a href="#" class="text-blue-500 hover:underline">LinkedIn</a>
+          <a href="#" class="text-blue-500 hover:underline">GitHub</a>
+          <a href="#" class="text-blue-500 hover:underline">Twitter</a>
+        </div>
+        <div>
+          <button>Follow</button>
+          <button>Message</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
