--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   <body class="bg-black">
     <div class="flex items-center justify-center min-h-screen my-16">
       <div class="flex flex-col items-center justify-center bg-white w-96 rounded-lg shadow-lg p-6">
-        <h2>Jane Doe</h2>
-        <p>Web Developer</p>
-        <p>Passionate web developer with experience in building responsive and scalable websites.</p>
-        <div class="flex space-x-4 mt-4">
-          <a href="#" class="text-blue-500 hover:underline">LinkedIn</a>
-          <a href="#" class="text-blue-500 hover:underline">GitHub</a>
-          <a href="#" class="text-blue-500 hover:underline">Twitter</a>
+        <img
+          src="./assets/jane-doe.jpg"
+          alt="Profile Picture"
+          class="rounded-full w-40 h-40 mb-4 border-4 border-cyan-600"
+        />
+        <h1 class="font-bold text-2xl">Jane Doe</h1>
+        <p class="text-cyan-600">California, United States</p>
+        <p class="font-semibold mb-2 ">Web Developer</p>
+        <!-- <p>Passionate web developer with experience in building responsive and scalable websites.</p> -->
+        <div class="flex flex-col space-y-4 my-4 w-full">
+          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
+          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >GitHub</a></p>
+          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Twitter</a></p>
         </div>
-        <div>
-          <button>Follow</button>
-          <button>Message</button>
-        </div>
+        <!-- <div class="flex space-x-4">
+          <button class="bg-blue-600 text-white border-2 rounded-lg px-2 py-1 border-blue-600">Follow</button>
+          <button class="bg-blue-600 text-white border-2 rounded-lg px-2 py-1 border-blue-600">Message</button>
+        </div> -->
       </div>
     </div>
   </body>
