set image height and width

--- a/index.html
+++ b/index.html
@@ -12,22 +12,16 @@
         <img
           src="./assets/jane-doe.jpg"
           alt="Profile Picture"
-          class="rounded-full w-40 h-40 mb-4 border-4 border-cyan-600"
+          class="rounded-full w-32 h-32 object-cover border-4 border-cyan-600"
         />
         <h1 class="font-bold text-2xl">Jane Doe</h1>
         <p class="text-cyan-600">California, United States</p>
         <p class="font-semibold mb-2 ">Web Developer</p>
-        <!-- <p>Passionate web developer with experience in building responsive and scalable websites.</p> -->
         <div class="flex flex-col space-y-4 my-4 w-full">
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >GitHub</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Twitter</a></p>
         </div>
-        <!-- <div class="flex space-x-4">
-          <button class="bg-blue-600 text-white border-2 rounded-lg px-2 py-1 border-blue-600">Follow</button>
-          <button class="bg-blue-600 text-white border-2 rounded-lg px-2 py-1 border-blue-600">Message</button>
-        </div> -->
-      </div>
     </div>
   </body>
 </html>
