--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-black">
+  <body class="bg-black font-sans">
     <div class="flex items-center justify-center min-h-screen my-16">
-      <div class="flex flex-col items-center justify-center bg-white w-96 rounded-lg shadow-lg p-6">
+      <div class="flex flex-col items-center justify-center bg-neutral-900 text-white w-96 rounded-lg shadow-lg p-6">
         <img
           src="./assets/jane-doe.jpg"
           alt="Profile Picture"
@@ -21,6 +21,7 @@
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >GitHub</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Twitter</a></p>
+          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Blog</a></p>
         </div>
     </div>
   </body>
