--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           class="rounded-full w-32 h-32 object-cover border-4 border-cyan-600"
         />
         <h1 class="font-bold text-2xl">Jane Doe</h1>
-        <p class="text-cyan-600">California, United States</p>
+        <p class="text-cyan-600">Okhlahoma, United States</p>
         <p class="font-semibold mb-2 ">Web Developer</p>
         <div class="flex flex-col space-y-4 my-4 w-full">
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
