--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="font-bold text-2xl">Jane Doe</h1>
         <p class="text-cyan-600">Okhlahoma, United States</p>
         <p class="font-semibold mb-2 ">Web Developer</p>
-        <div class="flex flex-col space-y-4 my-4 w-full">
+        <div class="flex flex-col space-y-4 my-4 w-3/4">
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >GitHub</a></p>
           <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Twitter</a></p>
