--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-black font-sans">
+  <body>
     <div class="flex items-center justify-center min-h-screen my-16">
       <div class="flex flex-col items-center justify-center bg-neutral-900 text-white w-96 rounded-lg shadow-lg p-6">
         <img
