--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
   </head>
   <body>
     <div class="flex items-center justify-center min-h-screen my-16">
-      <div class="flex flex-col items-center justify-center bg-neutral-900 text-white w-96 rounded-lg shadow-lg p-6">
-        <img
-          src="./assets/jane-doe.jpg"
-          alt="Profile Picture"
-          class="rounded-full w-32 h-32 object-cover border-4 border-cyan-600"
-        />
-        <h1 class="font-bold text-2xl">Jane Doe</h1>
-        <p class="text-green-600">Okhlahoma, United States</p>
-        <p class="font-semibold mb-2 ">Web Developer</p>
-        <div class="flex flex-col space-y-4 my-4 w-3/4">
-          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >LinkedIn</a></p>
-          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >GitHub</a></p>
-          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Twitter</a></p>
-          <p class="border-2 rounded-lg w-full text-black border-cyan-600 bg-cyan-600 py-2 px-2 text-center"><a href="#" >Blog</a></p>
-        </div>
+      <div class="bg-white shadow-lg rounded-lg p-8 max-w-sm w-full">
+        <h1 class="text-2xl font-bold mb-4">Hello, Tailwind CSS!</h1>
+        <p class="text-gray-700 mb-4">This is a simple example of using Tailwind CSS.</p>
+        <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-50">
+          Click Me
+        </button>
+      </div>
     </div>
   </body>
 </html>
