--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <div class="flex items-center justify-center min-h-screen my-16">
-      <div class="bg-white shadow-lg rounded-lg p-8 max-w-sm w-full">
-        <h1 class="text-2xl font-bold mb-4">Hello, Tailwind CSS!</h1>
-        <p class="text-gray-700 mb-4">This is a simple example of using Tailwind CSS.</p>
-        <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-50">
-          Click Me
-        </button>
+    <div>
+      <nav>
+        <h1>Zainab<span>Adeoje</span></h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div>
+        <h1>Welcome to my website</h1>
+        <p>This is a simple website using Tailwind CSS.</p>
+        <div>
+          <button>Hire Me</button>
+          <button>Learn More</button>
+        </div>
       </div>
     </div>
   </body>
