--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+      body {
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
-  <body>
-    <div>
-      <nav>
-        <h1>Zainab<span>Adeoje</span></h1>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+  <body class="bg-black text-white">
+    
+    <div class="container min-h-screen">
+      <nav class="flex justify-between items-center p-5">
+        <h1 class="text-3xl">Zainab<span class="text-yellow-600 ml-3">Adeoje</span></h1>
+        <ul class="flex space-x-4">
+          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Home</a></li>
+          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">About</a></li>
+          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Services</a></li>
+          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Contact</a></li>
         </ul>
+        <img src="./assets/jane-doe.jpg" alt="Logo" class="w-16 h-16 rounded-full" />
       </nav>
       <div>
         <h1>Welcome to my website</h1>
