--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
       }
     </style>
   </head>
-  <body class="bg-black text-white">
+  <body>
     
-    <div class="container min-h-screen">
-      <nav class="flex justify-between items-center p-5">
-        <h1 class="text-3xl">Zainab<span class="text-yellow-600 ml-3">Adeoje</span></h1>
+    <div class="container min-h-screen bg-[url('/assets/hero-section.jpg')] bg-cover bg-center text-white">
+      <nav class="flex items-center py-5 justify-center">
+        <h1 class="text-3xl mr-10">M&M</h1>
         <ul class="flex space-x-4">
-          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Home</a></li>
-          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">About</a></li>
-          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Services</a></li>
-          <li><a href="#" class="text-lg hover:text-yellow-600 hover:bg-yellow-600 hover:">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Order Online</a></li>
+          <li><a href="#">Book a Table</a></li>
         </ul>
-        <img src="./assets/jane-doe.jpg" alt="Logo" class="w-16 h-16 rounded-full" />
       </nav>
       <div>
-        <h1>Welcome to my website</h1>
-        <p>This is a simple website using Tailwind CSS.</p>
+        <h1>Mug <span>&</span> Muffin</h1>
+        <p>Come for the coffee, stay for the crumbs</p>
         <div>
-          <button>Hire Me</button>
-          <button>Learn More</button>
+          <button>Order Now</button>
         </div>
       </div>
     </div>
