--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <title>Testing Tailwind CSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
       body {
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
       }
     </style>
   </head>
   <body>
-    
-    <div class="container min-h-screen bg-[url('/assets/hero-section.jpg')] bg-cover bg-center text-white">
-      <nav class="flex items-center py-5 justify-center">
-        <h1 class="text-3xl mr-10">M&M</h1>
+    <div class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center">
+      <div class="absolute inset-0 bg-black/50"></div>
+      <nav
+        class="flex items-center py-5 justify-center absolute w-full bg-amber-950 text-white"
+      >
+        <h1 class="text-3xl mr-10 text-amber-500">M&M</h1>
         <ul class="flex space-x-4">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Order Online</a></li>
-          <li><a href="#">Book a Table</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">About</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Menu</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Order Online</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Book a Table</a></li>
         </ul>
       </nav>
-      <div>
-        <h1>Mug <span>&</span> Muffin</h1>
-        <p>Come for the coffee, stay for the crumbs</p>
-        <div>
-          <button>Order Now</button>
-        </div>
+      <div
+        class="flex flex-col items-center justify-center h-screen text-white"
+      >
+        <h1 class="text-7xl">Mug & Muffin</h1>
+        <p class="text-xl">Come for the coffee, stay for the crumbs</p>
+          <button class="mt-6 border-3 border-amber-500 text-lg hover:outline-none hover:bg-amber-500 py-2 px-4 rounded-lg">Order Now</button>
       </div>
     </div>
   </body>
