finished working on the hero section

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   </head>
   <body>
     <div class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center">
-      <div class="absolute inset-0 bg-black/50"></div>
+      <div class="absolute inset-0 bg-black/40"></div>
       <nav
         class="flex items-center py-5 justify-center absolute w-full bg-amber-950 text-white"
       >
         <h1 class="text-3xl mr-10 text-amber-500">M&M</h1>
         <ul class="flex space-x-4">
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">About</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Menu</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Order Online</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-500 ">Book a Table</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">About</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Menu</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Order Online</a></li>
+          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Book a Table</a></li>
         </ul>
       </nav>
       <div
@@ -31,7 +31,10 @@
       >
         <h1 class="text-7xl">Mug & Muffin</h1>
         <p class="text-xl">Come for the coffee, stay for the crumbs</p>
-          <button class="mt-6 border-3 border-amber-500 text-lg hover:outline-none hover:bg-amber-500 py-2 px-4 rounded-lg">Order Now</button>
+        <button class="mt-6 border-2   border-amber-500 text-lg text-amber-500 py-3 px-6 transition duration-300 ease-in-out">
+          Order Now
+        </button>
+        
       </div>
     </div>
   </body>
