--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         class="flex flex-col items-center justify-center h-screen text-white"
       >
         <h1 class="text-7xl">Mug & Muffin</h1>
-        <p class="text-xl">Come for the coffee, stay for the crumbs</p>
+        <p class="text-xl font-semibold">Come for the coffee, stay for the crumbs</p>
         <button class="mt-6 border-2   border-amber-500 text-lg text-amber-500 py-3 px-6 transition duration-300 ease-in-out">
           Order Now
         </button>
