--- a/index.html
+++ b/index.html
@@ -13,28 +13,64 @@
     </style>
   </head>
   <body>
-    <div class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center">
+    <!-- Navbar and hero section -->
+    <div
+      class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center"
+    >
       <div class="absolute inset-0 bg-black/40"></div>
       <nav
         class="flex items-center py-5 justify-center absolute w-full bg-amber-950 text-white"
       >
         <h1 class="text-3xl mr-10 text-amber-500">M&M</h1>
         <ul class="flex space-x-4">
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">About</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Menu</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Order Online</a></li>
-          <li><a href="#" class="text-lg mr-5 hover:text-amber-600 ">Book a Table</a></li>
+          <li>
+            <a href="#" class="text-lg mr-5 hover:text-amber-600">About</a>
+          </li>
+          <li>
+            <a href="#" class="text-lg mr-5 hover:text-amber-600">Menu</a>
+          </li>
+          <li>
+            <a href="#" class="text-lg mr-5 hover:text-amber-600"
+              >Order Online</a
+            >
+          </li>
+          <li>
+            <a href="#" class="text-lg mr-5 hover:text-amber-600"
+              >Book a Table</a
+            >
+          </li>
         </ul>
       </nav>
       <div
         class="flex flex-col items-center justify-center h-screen text-white"
       >
         <h1 class="text-7xl">Mug & Muffin</h1>
-        <p class="text-xl font-semibold">Come for the coffee, stay for the crumbs</p>
-        <button class="mt-6 border-2   border-amber-500 text-lg text-amber-500 py-3 px-6 transition duration-300 ease-in-out">
+        <p class="text-xl font-semibold">
+          Come for the coffee, stay for the crumbs
+        </p>
+        <button
+          class="mt-6 border-2 border-amber-500 text-lg text-amber-500 py-3 px-6 transition duration-300 ease-in-out"
+        >
           Order Now
         </button>
       </div>
     </div>
+    <!-- Main section -->
+    <main>
+      <!-- First Div -->
+      <div class="flex flex-row md:flex-col bg-white">
+        <div>
+          <h1>Eat.</h1>
+          <h3>Breakfast, Lunch and Artisanal Pastries</h3>
+          <p>
+            We are a local coffee shop that serves breakfast, lunch and
+            artisanal pastries. We are open from 7am to 7pm every day.</p>
+          <button>See More</button>
+        </div>
+        <div>
+          <img src="/assets/eat.jpg"/>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
