First div: added styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <!-- First Div -->
       <div class="flex flex-row md:flex-col bg-white">
-        <div>
+        <div class="h-full w-1/2">
           <h1>Eat.</h1>
           <h3>Breakfast, Lunch and Artisanal Pastries</h3>
           <p>
@@ -68,7 +68,7 @@
           <button>See More</button>
         </div>
         <div>
-          <img src="/assets/eat.jpg"/>
+          <img src="/assets/eat.jpg" alt="Pancake picture" class="h-full w-1/2"/>
         </div>
       </div>
     </main>
