--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
     <!-- Main section -->
     <main>
       <!-- First Div -->
-      <div class="flex flex-row md:flex-col bg-white">
-        <div class="h-full w-1/2">
-          <h1>Eat.</h1>
-          <h3>Breakfast, Lunch and Artisanal Pastries</h3>
-          <p>
+      <div class="flex flex-col md:flex-row min-h-screen">
+        <div class="flex-1 flex flex-col justify-center items-start p-10 bg-white">
+          <h1 class="text-6xl font-bold mb-4">Eat.</h1>
+          <h3 class="text-xl mb-4">Breakfast, Lunch and Artisanal Pastries</h3>
+          <p class="text-gray-700 mb-6 max-w-md">
             We are a local coffee shop that serves breakfast, lunch and
             artisanal pastries. We are open from 7am to 7pm every day.</p>
-          <button>See More</button>
+          <button class="border border-black px-6 py-2 hover:bg-black hover:text-white transition">See More</button>
         </div>
-        <div>
-          <img src="/assets/eat.jpg" alt="Pancake picture" class="h-full w-1/2"/>
+        <div class="flex-1">
+          <img src="/assets/eat.jpg" alt="Pancake picture" class="w-full h-full object-cover"/>
         </div>
       </div>
     </main>
