--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           Come for the coffee, stay for the crumbs
         </p>
         <button
-          class="mt-6 border-2 border-amber-500 text-lg text-amber-500 py-3 px-6 transition duration-300 ease-in-out"
+          class="mt-6 border-2 border-amber-500 text-lg text-amber-500 hover:bg-amber-950 hover:text-white py-3 px-6 transition duration-300 ease-in-out"
         >
           Order Now
         </button>
@@ -58,17 +58,85 @@
     <!-- Main section -->
     <main>
       <!-- First Div -->
-      <div class="flex flex-col md:flex-row min-h-screen">
-        <div class="flex-1 flex flex-col justify-center items-start p-10 bg-white">
+      <div class="flex flex-col md:flex-row min-h-[300px]">
+        <div
+          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+        >
           <h1 class="text-6xl font-bold mb-4">Eat.</h1>
-          <h3 class="text-xl mb-4">Breakfast, Lunch and Artisanal Pastries</h3>
-          <p class="text-gray-700 mb-6 max-w-md">
+          <h3 class="text-xl text-amber-500 mb-4">
+            Breakfast, Lunch and Artisanal Pastries
+          </h3>
+          <p class="mb-6 max-w-md">
             We are a local coffee shop that serves breakfast, lunch and
-            artisanal pastries. We are open from 7am to 7pm every day.</p>
-          <button class="border border-black px-6 py-2 hover:bg-black hover:text-white transition">See More</button>
+            artisanal pastries. We are open from 7am to 7pm every day.
+          </p>
+          <button
+            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+          >
+            See More
+          </button>
         </div>
         <div class="flex-1">
-          <img src="/assets/eat.jpg" alt="Pancake picture" class="w-full h-full object-cover"/>
+          <img
+            src="/assets/eat.jpg"
+            alt="Pancake picture"
+            class="w-full h-full object-cover"
+          />
+        </div>
+      </div>
+
+      <!-- Second Div -->
+      <div class="flex flex-col md:flex-row gap-0 min-h-[300px]">
+        <div class="flex-1">
+          <img
+            src="/assets/drink.jpg"
+            alt="Coffee picture"
+            class="w-full h-full object-cover"
+          />
+        </div>
+        <div
+          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+        >
+          <h1 class="text-6xl font-bold mb-4">Drink.</h1>
+          <h3 class="text-xl text-amber-500 mb-4">The Freshest Cup in Town</h3>
+          <p class="mb-6 max-w-md">
+            We serve freshly brewed coffee that appeals to your taste buds and
+            starts your day right.
+          </p>
+          <button
+            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+          >
+            See More
+          </button>
+        </div>
+      </div>
+
+      <!-- Third Div -->
+      <div class="flex flex-col md:flex-row min-h-[300px]">
+        <div
+          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+        >
+          <h1 class="text-6xl font-bold mb-4">Enjoy.</h1>
+          <h3 class="text-xl text-amber-500 mb-4">
+            Make Yourself at Home
+          </h3>
+          <p class="mb-6 max-w-md">
+            Enjoy your coffee and pastries in a cozy environment. We have free
+            Wi-Fi and comfortable seating for you to relax and unwind. Our staff is
+            friendly and always ready to help you with your needs.
+          </p>
+          <button
+            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+          >
+            Visit Us
+          </button>
+        </div>
+        <div class="flex-1">
+          <img
+            src="/assets/eat.jpg"
+            alt="Pancake picture"
+            class="w-full h-full object-cover"
+          />
         </div>
       </div>
     </main>
