changed border color for all buttons

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             artisanal pastries. We are open from 7am to 7pm every day.
           </p>
           <button
-            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+            class="border border-amber-950 px-6 py-2 hover:bg-amber-950 hover:text-white transition"
           >
             See More
           </button>
@@ -104,7 +104,7 @@
             starts your day right.
           </p>
           <button
-            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+            class="border border-amber-950 px-6 py-2 hover:bg-amber-950 hover:text-white transition"
           >
             See More
           </button>
@@ -126,7 +126,7 @@
             friendly and always ready to help you with your needs.
           </p>
           <button
-            class="border border-black px-6 py-2 hover:bg-amber-950 hover:text-white transition"
+            class="border border-amber-950 px-6 py-2 hover:bg-amber-950 hover:text-white transition"
           >
             Visit Us
           </button>
