updated the 3 divs

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- First Div -->
       <div class="flex flex-col md:flex-row min-h-[300px]">
         <div
-          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Eat.</h1>
           <h3 class="text-xl text-amber-500 mb-4">
@@ -76,7 +76,7 @@
             See More
           </button>
         </div>
-        <div class="flex-1">
+        <div class="flex-1 w-full md:w-1/2">
           <img
             src="/assets/eat.jpg"
             alt="Pancake picture"
@@ -86,16 +86,9 @@
       </div>
 
       <!-- Second Div -->
-      <div class="flex flex-col md:flex-row gap-0 min-h-[300px]">
-        <div class="flex-1">
-          <img
-            src="/assets/drink.jpg"
-            alt="Coffee picture"
-            class="w-full h-full object-cover"
-          />
-        </div>
+      <div class="flex flex-col md:flex-row min-h-[300px]">
         <div
-          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex w-full md:w-1/2 flex-col justify-center items-start text-amber-950 p-15 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Drink.</h1>
           <h3 class="text-xl text-amber-500 mb-4">The Freshest Cup in Town</h3>
@@ -109,12 +102,19 @@
             See More
           </button>
         </div>
+        <div class="flex-1 w-full md:w-1/2">
+          <img
+            src="/assets/drink.jpg"
+            alt="Coffee picture"
+            class="w-full h-full object-cover"
+          />
+        </div>
       </div>
 
       <!-- Third Div -->
       <div class="flex flex-col md:flex-row min-h-[300px]">
         <div
-          class="flex-1 flex flex-col justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Enjoy.</h1>
           <h3 class="text-xl text-amber-500 mb-4">
@@ -131,7 +131,7 @@
             Visit Us
           </button>
         </div>
-        <div class="flex-1">
+        <div class="flex-1 w-full md:w-1/2">
           <img
             src="/assets/eat.jpg"
             alt="Pancake picture"
