aligned the 3 main divs vertically

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Main section -->
     <main>
       <!-- First Div -->
-      <div class="flex flex-col md:flex-row min-h-[300px]">
+      <div class="flex flex-col md:flex-row h-[500px]">
         <div
           class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
         >
@@ -76,7 +76,7 @@
             See More
           </button>
         </div>
-        <div class="flex-1 w-full md:w-1/2">
+        <div class="w-full md:w-1/2">
           <img
             src="/assets/eat.jpg"
             alt="Pancake picture"
@@ -86,7 +86,7 @@
       </div>
 
       <!-- Second Div -->
-      <div class="flex flex-col md:flex-row min-h-[300px]">
+      <div class="flex flex-col md:flex-row-reverse h-[500px]">
         <div
           class="flex-1 flex w-full md:w-1/2 flex-col justify-center items-start text-amber-950 p-15 bg-white"
         >
@@ -102,7 +102,7 @@
             See More
           </button>
         </div>
-        <div class="flex-1 w-full md:w-1/2">
+        <div class="w-full md:w-1/2">
           <img
             src="/assets/drink.jpg"
             alt="Coffee picture"
@@ -112,7 +112,7 @@
       </div>
 
       <!-- Third Div -->
-      <div class="flex flex-col md:flex-row min-h-[300px]">
+      <div class="flex flex-col md:flex-row h-[500px]">
         <div
           class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
         >
@@ -131,7 +131,7 @@
             Visit Us
           </button>
         </div>
-        <div class="flex-1 w-full md:w-1/2">
+        <div class="w-full md:w-1/2">
           <img
             src="/assets/eat.jpg"
             alt="Pancake picture"
