--- a/index.html
+++ b/index.html
@@ -140,5 +140,8 @@
         </div>
       </div>
     </main>
+    <div class="flex flex-col items-center justify-center bg-amber-500 p-10">
+      <h1 class="font-bold text-5xl mb-5">Drop By for a Bite</h1>
+    </div>
   </body>
 </html>
