added styles to the pre-footer div

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- First Div -->
       <div class="flex flex-col md:flex-row h-[500px]">
         <div
-          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 px-15 py-7 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Eat.</h1>
           <h3 class="text-xl text-amber-500 mb-4">
@@ -88,7 +88,7 @@
       <!-- Second Div -->
       <div class="flex flex-col md:flex-row-reverse h-[500px]">
         <div
-          class="flex-1 flex w-full md:w-1/2 flex-col justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex w-full md:w-1/2 flex-col justify-center items-start text-amber-950 px-15 py-7 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Drink.</h1>
           <h3 class="text-xl text-amber-500 mb-4">The Freshest Cup in Town</h3>
@@ -114,16 +114,14 @@
       <!-- Third Div -->
       <div class="flex flex-col md:flex-row h-[500px]">
         <div
-          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 p-15 bg-white"
+          class="flex-1 flex flex-col w-full md:w-1/2 justify-center items-start text-amber-950 px-15 py-7 bg-white"
         >
           <h1 class="text-6xl font-bold mb-4">Enjoy.</h1>
-          <h3 class="text-xl text-amber-500 mb-4">
-            Make Yourself at Home
-          </h3>
+          <h3 class="text-xl text-amber-500 mb-4">Make Yourself at Home</h3>
           <p class="mb-6 max-w-md">
             Enjoy your coffee and pastries in a cozy environment. We have free
-            Wi-Fi and comfortable seating for you to relax and unwind. Our staff is
-            friendly and always ready to help you with your needs.
+            Wi-Fi and comfortable seating for you to relax and unwind. Our staff
+            is friendly and always ready to help you with your needs.
           </p>
           <button
             class="border border-amber-950 px-6 py-2 hover:bg-amber-950 hover:text-white transition"
@@ -139,9 +137,24 @@
           />
         </div>
       </div>
+      <div
+        class="flex flex-col items-center justify-center bg-amber-200 py-15"
+      >
+        <h1 class="font-bold text-5xl mb-10">Drop By for a Bite</h1>
+        <div class="flex flex-col md:flex-row justify-center items-center divide-x  divide-black space-x-10">
+          <div class="px-10">
+            <h3 class="text-3xl mb-4">Address</h3>
+            <p class="text-lg mb-2">1234 Coffee St,</p>
+            <p>Brewtown, CA 12345</p>
+          </div>
+          <div>
+            <h3 class="text-3xl mb-4">Opening Hours</h3>
+            <p class="text-lg mb-2">Mon-Fri: 9am - 6pm</p>
+            <p class="text-lg mb-2">Saturday: 10am - 2pm</p>
+            <p class="text-lg">Sunday: Closed</p>
+          </div>
+        </div>
+      </div>
     </main>
-    <div class="flex flex-col items-center justify-center bg-amber-500 p-10">
-      <h1 class="font-bold text-5xl mb-5">Drop By for a Bite</h1>
-    </div>
   </body>
 </html>
