finished working on images div

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           />
         </div>
       </div>
-      <section class="bg-amber-200 py-16 text-center">
+      <section class="bg-amber-200 py-16 text-amber-950  text-center">
         <h2 class="text-4xl font-bold mb-12">Drop By for a Bite.</h2>
       
         <div class="flex justify-center items-start gap-12 divide-x divide-black max-w-4xl mx-auto px-4">
@@ -147,12 +147,44 @@
             <p>Brewtown, CA 12345</p>
           </div>
           <div class=" text-center">
-            <h3 class="text-xl font-semibold mb-2">Opening Hours</h3>
+            <h3 class="text-xl  font-semibold mb-2">Opening Hours</h3>
             <p>Mon - Fri: 9am - 6pm</p>
             <p>Saturday: 10am - 2pm</p>
             <p>Sunday: Closed</p>
           </div>
         </div>
+      </section>
+      <section class="flex w-full">
+        <img
+          src="/assets/aesthetic-2.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
+        <img
+          src="/assets/aesthetic-5.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
+        <img
+          src="/assets/aesthetic-1.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
+        <img
+          src="/assets/aesthetic-6.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
+        <img
+          src="/assets/aesthetic-4.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
+        <img
+          src="/assets/aesthetic-3.jpg"
+          alt="Aesthetic picture"
+          class="w-1/6 object-cover h-[400px]"
+        />
       </section>
     </main>
   </body>
