updated image for enjoy div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div
       class="container min-h-screen relative bg-[url('/assets/hero-section.jpg')] bg-cover bg-center"
     >
-      <div class="absolute inset-0 bg-black/40"></div>
+      <div class="absolute inset-0 bg-black/30"></div>
       <nav
         class="flex items-center py-5 justify-center absolute w-full bg-amber-950 text-white"
       >
@@ -48,7 +48,7 @@
       <div
         class="flex flex-col items-center justify-center h-screen text-white"
       >
-        <h1 class="text-7xl">Mug & Muffin</h1>
+        <h1 class="text-7xl">Mug & Muffins</h1>
         <p class="text-xl font-semibold">
           Come for the coffee, stay for the crumbs
         </p>
@@ -135,15 +135,15 @@
         </div>
         <div class="w-full md:w-1/2">
           <img
-            src="/assets/eat.jpg"
+            src="/assets/enjoy.jpg"
             alt="Pancake picture"
             class="w-full h-full object-cover"
           />
         </div>
       </div>
+      <!-- Next Section -->
       <section class="bg-amber-200 py-16 text-amber-950 text-center">
         <h2 class="text-4xl font-bold mb-12">Drop By for a Bite.</h2>
-
         <div
           class="flex justify-center items-start gap-12 divide-x divide-amber-950 max-w-4xl mx-auto px-4"
         >
@@ -160,6 +160,7 @@
           </div>
         </div>
       </section>
+      <!-- Images Section -->
       <section class="flex w-full">
         <img
           src="/assets/aesthetic-2.jpg"
@@ -182,12 +183,13 @@
           class="w-1/5 object-cover h-[400px]"
         />
         <img
-          src="/assets/aesthetic-3.jpg"
+          src="/assets/aesthetic-1.jpg"
           alt="Aesthetic picture"
           class="w-1/5 object-cover h-[400px]"
         />
       </section>
     </main>
+    <!-- Footer Section -->
     <footer class="bg-amber-950 text-white py-15 px-6 ">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <!-- Newsletter -->
