finished working on desktop design

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="w-full md:w-1/2">
           <img
             src="/assets/enjoy.jpg"
-            alt="Pancake picture"
+            alt="A breakfast spread"
             class="w-full h-full object-cover"
           />
         </div>
