updated footer section

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
           </form>
         </div>
 
-        <!-- Talk to Us -->
+        <!-- Get in Touch -->
         <div>
-          <h3 class="text-2xl font-semibold text-amber-500 mb-4">Talk to Us</h3>
+          <h3 class="text-2xl font-semibold text-amber-500 mb-4">Get in Touch</h3>
           <p class="mb-3">Email: info@mandm.com</p>
           <p class="mb-3">Phone: +123 456 7890</p>
           <p class="">Address: 1234 Coffee St, Brewtown, CA 12345</p>
