changed email placeholder

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <form class="flex flex-col gap-2">
             <input
               type="email"
-              placeholder="Your email"
+              placeholder="janedoe@gmail.com"
               class="px-4 py-2 border mb-5 border-white"
             />
             <button
